@@ -8440,6 +8440,112 @@ name|columnNamesString
 argument_list|)
 expr_stmt|;
 block|}
+specifier|public
+specifier|static
+name|void
+name|validatePartSpec
+parameter_list|(
+name|Table
+name|tbl
+parameter_list|,
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|partSpec
+parameter_list|)
+throws|throws
+name|SemanticException
+block|{
+name|List
+argument_list|<
+name|FieldSchema
+argument_list|>
+name|parts
+init|=
+name|tbl
+operator|.
+name|getPartitionKeys
+argument_list|()
+decl_stmt|;
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|partCols
+init|=
+operator|new
+name|HashSet
+argument_list|<
+name|String
+argument_list|>
+argument_list|(
+name|parts
+operator|.
+name|size
+argument_list|()
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|FieldSchema
+name|col
+range|:
+name|parts
+control|)
+block|{
+name|partCols
+operator|.
+name|add
+argument_list|(
+name|col
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+for|for
+control|(
+name|String
+name|col
+range|:
+name|partSpec
+operator|.
+name|keySet
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+operator|!
+name|partCols
+operator|.
+name|contains
+argument_list|(
+name|col
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|SemanticException
+argument_list|(
+name|ErrorMsg
+operator|.
+name|NONEXISTPARTCOL
+operator|.
+name|getMsg
+argument_list|(
+name|col
+argument_list|)
+argument_list|)
+throw|;
+block|}
+block|}
+block|}
 block|}
 end_class
 
