@@ -281,6 +281,24 @@ name|hive
 operator|.
 name|ql
 operator|.
+name|exec
+operator|.
+name|Utilities
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
 name|hooks
 operator|.
 name|LineageInfo
@@ -3491,6 +3509,25 @@ name|val
 init|=
 literal|null
 decl_stmt|;
+name|String
+name|colName
+init|=
+name|unescapeIdentifier
+argument_list|(
+name|partspec_val
+operator|.
+name|getChild
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getText
+argument_list|()
+operator|.
+name|toLowerCase
+argument_list|()
+argument_list|)
+decl_stmt|;
 if|if
 condition|(
 name|partspec_val
@@ -3529,26 +3566,21 @@ name|partSpec
 operator|.
 name|put
 argument_list|(
-name|unescapeIdentifier
-argument_list|(
-name|partspec_val
-operator|.
-name|getChild
-argument_list|(
-literal|0
-argument_list|)
-operator|.
-name|getText
-argument_list|()
-operator|.
-name|toLowerCase
-argument_list|()
-argument_list|)
+name|colName
 argument_list|,
 name|val
 argument_list|)
 expr_stmt|;
 block|}
+name|Utilities
+operator|.
+name|validatePartSpec
+argument_list|(
+name|tableHandle
+argument_list|,
+name|partSpec
+argument_list|)
+expr_stmt|;
 comment|// check if the partition spec is valid
 if|if
 condition|(
