@@ -1,0 +1,1 @@
+analyze table srcpart compute statistics;
