@@ -1,0 +1,1 @@
+analyze table srcpart partition (key) compute statistics;
